# ternaryLLM

./: .gitignore  LICENSE  README.md
SSR/: README.md
ternaryLLM_CPU/: README.md  SIMD_Generator.ipynb  ternaryLLM.vcxproj  ternaryLLM.vcxproj.filters
ternaryLLM_CPU/src/: GEMM_CPU_FP32.cpp  GEMM_CPU_FP32.hpp  GEMM_CPU_INT8.cpp  GEMM_CPU_INT8.hpp  LlamaModel.hpp  main.cpp
ternaryLLM_FPGA/: .gitignore  README.md  build.sbt  build.sc
ternaryLLM_FPGA/Results/: Benchmarking_TernaryGEMM.odt  Results.ods
ternaryLLM_FPGA/coyote_files/hw/: CMakeLists.txt  vfpga_top.svh
ternaryLLM_FPGA/coyote_files/sw/: CMakeLists.txt
ternaryLLM_FPGA/hw/spinal/MatrixAdd/: Wrap_logic.scala  logic.scala
ternaryLLM_FPGA/hw/spinal/gemmacc/coyote/: AxiCoyote.scala  Types.scala
ternaryLLM_FPGA/hw/spinal/gemmacc/sim/old/Base/: ActivationBufferSim.scala  ActivationToTernaryGEMMSim.scala  DataFSMSim.scala  TernaryGEMMSim.scala  TopLevelBaseSim.scala
ternaryLLM_FPGA/hw/spinal/gemmacc/sim/old/Op/: DataFSMOPSim.scala  TopLevelOPSim.scala
ternaryLLM_FPGA/hw/spinal/gemmacc/sim/old/Op/coyote_v2/: TopLevelSim.scala
ternaryLLM_FPGA/hw/spinal/gemmacc/sim/ternaryGEMM/: TopLevelSim.scala
ternaryLLM_FPGA/hw/spinal/gemmacc/sim/testLogic/: logic_sim.scala
ternaryLLM_FPGA/hw/spinal/gemmacc/src/: Config.scala  Generator.scala
ternaryLLM_FPGA/hw/spinal/gemmacc/src/design/: DataFSM.scala  PE.scala  TopLevel.scala  WrapGEMM.scala
ternaryLLM_FPGA/hw/spinal/gemmacc/src/old/AXI_version/: DataFSM_OP_AXI.scala  TopLevelOP_AXI.scala
ternaryLLM_FPGA/hw/spinal/gemmacc/src/old/Base/: ActivationBuffer.scala  DataFSM_Base.scala  TernaryGEMM.scala  TopLevelBase.scala
ternaryLLM_FPGA/hw/spinal/gemmacc/src/old/Op/coyote_v2/: DataFSM.scala  PE.scala  TopLevel_new.scala  WrapGEMM.scala
ternaryLLM_FPGA/hw/spinal/gemmacc/src/old/Op/coyote_v2/old/: DataFSM_OP_coyote_v2.scala  TopLevelOP_coyote_v2.scala  WrapSys.scala
ternaryLLM_FPGA/hw/spinal/gemmacc/util/: AxiMemorySim.scala  InputAndCheck.scala
ternaryLLM_FPGA/hw/vhdl/: vfpga_top.svh
ternaryLLM_FPGA/sw/MatrixAdd/: main.cpp
ternaryLLM_FPGA/sw/gemmacc/: main.cpp
ternaryLLM_GPU/: .gitignore  Benchmarks.ipynb  CMakeLists.txt  benchmark_ternary_llama.py  build.sh  setup.py  ternaryLLM.sln  ternaryLLM.vcxproj
ternaryLLM_GPU/TernaryLLM/: TernaryCSC.py  TernaryLinear.py  configuration_ternary.py
ternaryLLM_GPU/config/: config.json
ternaryLLM_GPU/csrc/: ter_spmm_kernel.cuh  utils.cuh
ternaryLLM_GPU/include/: devutil.cuh  ter_spmm.cuh  ter_spmm_kernels.cuh  ter_spmv.cuh  ter_spmv_kernels.cuh  util.h
ternaryLLM_GPU/lib/: ter_spmm.cu  ter_spmm_kernels.cu  ter_spmv.cu  ter_spmv_kernels.cu
ternaryLLM_GPU/pytorch_ext/: README.md  benchmark_ternary_attn.py  benchmark_ternary_mlp.py
ternaryLLM_GPU/pytorch_ext/TernaryLLM/: TernaryAttn.py  TernaryLlama.py  TernaryMLP.py  __init__.py
ternaryLLM_GPU/pytorch_ext/benchmark/: benchmark_nnlinear.py  benchmark_sparse.py
ternaryLLM_GPU/pytorch_ext/csrc/: ter_spmm_wrapper.cu
ternaryLLM_GPU/src/: benchmark.cu  benchmark_spmv.cu  benchmarks.cuh  main.cu
